# prj_rust

./: .gitignore  README.md
curso-luis-serrano-yt/: README.md
curso-luis-serrano-yt/lec-2/: Cargo.toml
curso-luis-serrano-yt/lec-2/src/: .main.rs.swp  main.rs
generico/: Cargo.toml
generico/src/: main.rs
mysql-crud-bookstore/: .env  .gitignore  Cargo.toml  README.md
mysql-crud-bookstore/src/: main.rs  schema.rs
mysql-crud-bookstore/src/controllers/: mod.rs
mysql-crud-bookstore/src/models/: mod.rs
mysql-crud-bookstore/src/routes/: mod.rs
rocket-by-fazt/: Cargo.toml  README.md
rocket-by-fazt/src/: main.rs
rocket-by-fazt/src/modules/: eduardo.rs
rocket-by-fazt/templates/: index.html.hbs
udemy-curso-completo-del-lenguaje-rust/: .README.md.swp  README.md
udemy-curso-completo-del-lenguaje-rust/seccion-6/: Cargo.toml
udemy-curso-completo-del-lenguaje-rust/seccion-6/src/: main.rs
